--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -5,6 +5,7 @@
   2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
 {% endcomment %}
 <link rel="apple-touch-icon" sizes="180x180" href="_includes/favicons/apple-touch-icon.png">
+<link rel="icon" href="_includes/favicons/favicon.svg">
 <link rel="icon" type="image/png" sizes="32x32" href="_includes/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="_includes/favicons/favicon-16x16.png">
 <link rel="manifest" href="_includes/favicons/site.webmanifest">
@@ -13,3 +14,4 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="_includes/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+
