--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,7 +2,7 @@
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 @font-face {
     font-family: OCR B;
-    src: url({{site.url}}assets/fonts/OCRB.otf) format('opentype');
+    src: url(OCRB.otf) format('opentype');
     font-weight: normal;
     font-style: normal;
 }
