--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,7 +1,7 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 @font-face {
-    font-family: OCR B;
+    font-family: "OCR B";
     src: url(OCRB.otf) format('opentype');
     font-weight: normal;
     font-style: normal;
