--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -6,3 +6,10 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: "OCR A";
+    src: url(OCRA.otf) format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
